--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dropzone": "^14.2.3",
     "react-map-gl": "^7.1.3",
     "react-scripts": "5.0.1",
+    "supercluster": "^8.0.1",
+    "swiper": "^8.2.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
