--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-map-gl": "^7.1.3",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "supercluster": "^8.0.1",
     "swiper": "^8.2.2",
