--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "@mui/x-data-grid": "^6.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,12 +16,14 @@
     "firebase": "^10.1.0",
     "jwt-decode": "^3.1.2",
     "mapbox-gl": "^2.15.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-map-gl": "^7.1.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.7.3",
     "supercluster": "^8.0.1",
     "swiper": "^8.2.2",
     "uuid": "^9.0.0",
