--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/area": "^6.5.0",
+    "@turf/distance": "^6.5.0",
+    "@types/mapbox__mapbox-gl-draw": "^1.4.0",
     "@wabson/mapbox-gl-feature-info": "^0.0.7",
     "firebase": "^10.1.0",
     "jwt-decode": "^3.1.2",
     "mapbox-gl": "^2.15.0",
+    "mapbox-gl-controls": "^2.3.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
